--- a/vpc_setup1.yml
+++ b/vpc_setup1.yml
@@ -59,7 +59,7 @@
 
     - name: creating the private subnet1
       ec2_vpc_subnet:
-        vpc_id: "{[vpcout.vpc.id}}"
+        vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
         az: "{{zone1}}"
         cidr: "{{prisub1cidr}}"
