--- a/vpc_setup1.yml
+++ b/vpc_setup1.yml
@@ -132,7 +132,7 @@
           - "{{prisub3_out.subnet.id}}"
         routes:
           - dest: 0.0.0.0/0
-            gateway_id: "{{natgw_out.gateway_id}}"
+            gateway_id: "{{natgw_out.nat_gateway_id}}"
       register: prirt_out
 
     - debug:
