--- a/vpc_setup1.yml
+++ b/vpc_setup1.yml
@@ -103,6 +103,8 @@
         vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
         state: present
+        tags:
+          Name: vprofile-prisubnet3
         subnets:
           - "{{pubsub1_out.subnet.id}}"
           - "{{pubsub2_out.subnet.id}}"
@@ -126,6 +128,8 @@
         vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
         state: present
+        tags:
+          Name: vprofile-prisubnet
         subnets:
           - "{{prisub1_out.subnet.id}}"
           - "{{prisub2_out.subnet.id}}"
