--- a/vpc_setup1.yml
+++ b/vpc_setup1.yml
@@ -172,5 +172,5 @@
     - name:
       copy:
         content: "vpcid: {{vpcout.vpc.id}}\npubsub1id: {{pubsub1_out.subnet.id}}\npubsub2id: {{pubsub2_out.subnet.id}}\npubsub3id: {{pubsub3_out.subnet.id}}\nprisub1id: {{prisub1_out.subnet.id}}\nprisub2id: {{prisub2_out.subnet.id}}\nprisub3id: {{prisub3_out.subnet.id}}\nigwid: {{igw_out.gateway_id}}\npubrtid: {{pubrt_out.route_table.id}}\nnatgwid: {{natgw_out.nat_gateway_id}}\nprirtid: {{prirt_out.route_table.id}}"
-        dest: variables/output_vars
+        dest: vars/output_vars
 
