--- a/Bastion.yml
+++ b/Bastion.yml
@@ -7,6 +7,9 @@
     - name: importing the variables
       include_vars: vars/Bastion_setup
 
+    - name: importing the variables
+      include_vars: vars/out_put.var
+
     - name: creating the key pair for aws
       ec2_key:
         name: vprofile-key
