--- a/Bastion.yml
+++ b/Bastion.yml
@@ -8,7 +8,7 @@
       include_vars: vars/Bastion_setup
 
     - name: importing the variables
-      include_vars: vars/out_put.var
+      include_vars: vars/output_vars
 
     - name: creating the key pair for aws
       ec2_key:
