new code is add to bastion

--- a/Bastion.yml
+++ b/Bastion.yml
@@ -59,6 +59,6 @@
           project: vprofile
           owner: Devopsteam
         group_id: "{{bastionsg_out.group_id}}"
-        vpc_subnet_id: "{{pubsub1_out.subnet.id}}"
+        vpc_subnet_id: "{{pubsub1id}}"
       register: bastionhost_out
 
